# mojo-gpu-puzzles

./: .gitignore  .pre-commit-config.yaml  README.md  mojoproject.toml  pixi.toml  pyproject.toml  test_solutions.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gh-pages.yml
book/: book.toml
book/book/: 404.html  index.html  introduction.html  print.html  puzzle_01_map.html  puzzle_02_zip.html  puzzle_03_guards.html  puzzle_04_map_2d.html  puzzle_05_broadcast.html  puzzle_06_blocks.html  puzzle_07_blocks_2d.html  puzzle_08_shared.html  puzzle_09_pooling.html  puzzle_10_dot_product.html  puzzle_11_1d_convolution.html  puzzle_12_prefix_sum.html  puzzle_13_axis_sum.html  puzzle_14_matrix_multiply.html  searchindex.js  toc.html  toc.js
book/src/: SUMMARY.md  howto.md  introduction.md  puzzle_01_map.md  puzzle_09_pooling.md  puzzle_11_1d_convolution.md  puzzle_12_prefix_sum.md  puzzle_13_axis_sum.md  puzzle_14_matrix_multiply.md
book/theme/: animation.js  copy.js  custom.js  head.hbs  header.hbs  index.hbs  init-amplitude.js  mermaid-init.js  mermaid-zoom.js  mojolang.js  sidebar.js  solution.js  tabs.js
problems/: p01.mojo  p02.mojo  p04_layout_tensor.mojo  p06.mojo  p07.mojo  p08.mojo  p09.mojo  p10.mojo  p11.mojo  p12.mojo  p13.mojo  p14.mojo
problems/p01/: p01.mojo
problems/p02/: p02.mojo
problems/p03/: p03.mojo
problems/p04/: p04.mojo  p04_layout_tensor.mojo
problems/p05/: p05.mojo  p05_layout_tensor.mojo
problems/p06/: p06.mojo
solutions/: p03.mojo  p04.mojo  p05_layout_tensor.mojo  p06.mojo  p07.mojo  p07_layout_tensor.mojo  p08.mojo  p09.mojo  p10.mojo  p11.mojo  p12.mojo  p13.mojo  p14.mojo  run.sh
(+122 files in other folders)
