[project]
name = "mojo-gpu-puzzles"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modular>=25.3.0",
    "poethepoet>=0.34.0",
]

[[tool.uv.index]]
url = "https://dl.modular.com/public/nightly/python/simple/"

[tool.uv]

[tool.poe.tasks]
tests = "bash solutions/run.sh"

p01 = "mojo problems/p01/p01.mojo"

p02 = "mojo problems/p02/p02.mojo"

p03 = "mojo problems/p03/p03.mojo"

p04 = "mojo problems/p04/p04.mojo"
p04_layout_tensor = "mojo problems/p04/p04_layout_tensor.mojo"
layout_tensor_intro = "mojo book/src/puzzle_04/intro.mojo"

p05 = "mojo problems/p05/p05.mojo"
p05_layout_tensor = "mojo problems/p05/p05_layout_tensor.mojo"

p06 = "mojo problems/p06/p06.mojo"

p07 = "mojo problems/p07/p07.mojo"
p07_layout_tensor = "mojo problems/p07/p07_layout_tensor.mojo"

p08 = "mojo problems/p08/p08.mojo"
p08_layout_tensor = "mojo problems/p08/p08_layout_tensor.mojo"

p09 = "mojo problems/p09/p09.mojo"
p09_layout_tensor = "mojo problems/p09/p09_layout_tensor.mojo"

p10 = "mojo problems/p10/p10.mojo"
p10_layout_tensor = "mojo problems/p10/p10_layout_tensor.mojo"

p11 = "mojo problems/p11/p11.mojo"

p12 = "mojo problems/p12/p12.mojo"

p13 = "mojo problems/p13/p13.mojo"

p14 = "mojo problems/p14/p14.mojo"

p15 = [
    { cmd = "mojo package problems/p15/op -o problems/p15/op.mojopkg" },
    { cmd = "python problems/p15/p15.py" }
]

p16-package = "mojo package problems/p16/op -o problems/p16/op.mojopkg"
p16-test-kernels = { cmd = "mojo test problems/p16", deps = ["p16-package"] }
p16 = { cmd = "python problems/p16/p16.py", deps = ["p16-package"] }
